# bazaar-arena

./: .clang-format  .cursorignore  .editorconfig  .gitignore  BazaarArena.slnx  README.md  bazaar-arena.sln  my_state.json  quality_deck_config.json  quality_deck_state.json
.cursor/rules/: ability-override-format.mdc  battle-simulator-ability-queue.mdc  cli-and-testing.mdc  csharp-standards.mdc  data-and-logging.mdc  development-experience.mdc  git-commit-format.mdc  greedy-deck-finder.mdc  item-design.mdc  item-table-convention.mdc  no-workarounds.mdc  project-conventions.mdc
Data/: qdf_tmp_state.json  quality_deck_state_sample.json  quality_top100.json
Data/Decks/: default.json  test_deck_a.json  test_deck_b.json  test_medium_bronze.json  test_medium_gold_diamond.json  test_small_bronze.json  test_small_silver.json
app/: README.md
app/backend/: README.md
app/frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
data/items/: common.yaml  mak.yaml  vanessa.yaml
data/schemas/: item.schema.json
docs/: Bazaar Arena 设计文档.md  Bazaar Arena 重构方案.md  api.md  architecture.md  bazaar.xlsx  bazaararena_gdf.md  changelog.md  cli-and-testing.md  data_format.md  engine_cli.md  gdf_performance_analysis.md  greedy-deck-finder-performance-notes.md  greedy-deck-finder.md  greedy-mak-bronze-top1-l2.txt  greedy-mak-bronze-top1-l3.txt  greedy-mak-bronze-top1-l4.txt  greedy-vanessa-bronze-top1-l3.txt  greedy-vanessa-bronze-top1-l4.txt  greedy-vanessa-bronze-top1-l5.txt  greedy-vanessa-bronze-top1-l9.txt  greedy-vanessa-bronze-top1.txt  gui-overview.md  implementation-notes.md  item-table-import-temp-20260408-142233.md  items-list.md  qdf_hillclimb_diagnosis.md  quality-deck-finder-perf-report.md  quality-deck-finder.md  quality-top100-report.md  quality_deck_state_analysis.md  quality_deck_state_qa.md  scripts-usage.md  simulator-itemstate-field-inventory.md  simulator-rebuild-phase1-execution.md  test-cases-large-bronze.md  test-cases-large-silver-gold-diamond.md  test-cases-medium-bronze.md  test-cases-medium-gold-diamond.md  test-cases-medium-silver.md  test-cases-small-bronze.md  (+5 more)
engine/: CMakeLists.txt
engine/cli/: main.cpp
engine/gdf/: main.cpp
engine/gdf_pa/: GdfPaBracket.cpp  GdfPaFullTopk.cpp  GdfPaGraph.cpp  GdfPaMetrics.cpp  GdfPaRoundRobin.cpp  main.cpp
engine/include/bazaararena/: engine.hpp  types.hpp
engine/include/bazaararena/core/: AbilityApply.hpp  AbilityDefinition.hpp  AbilityPriority.hpp  AbilityQueue.hpp  AbilityType.hpp  AuraDefinition.hpp  BattleContext.hpp  DerivedTag.hpp  Hero.hpp  HpTable.hpp  ItemKey.hpp  ItemSize.hpp  ItemState.hpp  ItemTemplate.hpp  ItemTier.hpp  Random.hpp  SideKey.hpp  SideState.hpp  Simulator.hpp  SimulatorInit.hpp  Tag.hpp  Trigger.hpp
engine/include/bazaararena/data/: GeneratedItems.hpp  ItemDatabase.hpp
engine/include/bazaararena/formula/: Condition.hpp  Formula.hpp  Percent.hpp
engine/include/bazaararena/gdf/: BattleEvaluator.hpp  CandidateState.hpp  DeckRep.hpp  GdfItemPrototypeCache.hpp  GdfLevelRules.hpp  GdfLoadYamlPool.hpp  GdfRunTiming.hpp  GdfSideBuilder.hpp  GreedySearcher.hpp  ItemPool.hpp  SwissTournament.hpp
engine/include/bazaararena/gdf_pa/: GdfPaBracket.hpp  GdfPaCsv.hpp  GdfPaFullTopk.hpp  GdfPaGraph.hpp  GdfPaMetrics.hpp  GdfPaRoundRobin.hpp
engine/include/bazaararena/io/: JsonLite.hpp  SideStateBuilder.hpp  SimulateJob.hpp  Sink.hpp  SinkExport.hpp
engine/include/bazaararena/literals/: duration.hpp
engine/src/bazaararena/core/: AbilityApply.cpp  AbilityQueue.cpp  BattleContext.cpp  SideState.cpp  Simulator.cpp
engine/src/bazaararena/data/: ItemDatabase.cpp  items_generated.cpp
engine/src/bazaararena/gdf/: BattleEvaluator.cpp  DeckRep.cpp  GdfItemPrototypeCache.cpp  GdfLevelRules.cpp  GdfLoadYamlPool.cpp  GdfSideBuilder.cpp  GreedySearcher.cpp  ItemPool.cpp  SwissTournament.cpp
engine/src/bazaararena/io/: JsonLite.cpp  SideStateBuilder.cpp  SimulateJob.cpp  Sink.cpp
engine/src/engine/: engine.cpp
legacy/: README.md
scripts/: analyze_quality_deck_state.py  build-exe.cmd  build-exe.ps1  copy_test_item_images.ps1  extract_quality_top100.py  gdf_enumerate_anchor_top1.py  inspect_quality_deck_state.py  merge_generality_to_excel.py  run.cmd  run.ps1  run_greedy_mak_bronze_top1.py  run_greedy_vanessa_bronze_top1.py  run_item_tests.py  run_item_tests_large_bronze.py  run_item_tests_large_silver_gold_diamond.py  run_item_tests_medium_bronze.py  run_item_tests_medium_gold_diamond.py  run_item_tests_medium_silver.py  run_item_tests_small_bronze.py  run_item_tests_small_silver.py  run_item_tests_vanessa_medium_bronze.py  run_item_tests_vanessa_small_bronze.py  webp_to_png.py  xlsx_to_item_table_csvs.py
tools/: gen_items_cpp.py  gen_items_sqlite.py
(+504 files in other folders)
